api: Introduce routes to query/modify networks connected to instances
